--- a/requirements.txt
+++ b/requirements.txt
@@ -87,6 +87,7 @@ scikit-learn==1.0.2
 scipy==1.7.3
 seaborn==0.11.2
 Send2Trash==1.8.0
+sentence-transformers==2.1.0
 six==1.16.0
 sniffio==1.2.0
 snowballstemmer==2.2.0
@@ -113,3 +114,5 @@ webencodings==0.5.1
 websocket-client==1.2.3
 widgetsnbextension==3.5.2
 zipp==3.7.0
+ray==1.9.2
+gradio==2.7.0
